--- a/index.html
+++ b/index.html
@@ -9,51 +9,82 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <!-- Можно заменить на свой логотип -->
-      <div class="logo">🎪</div>
+      <div class="logo" aria-hidden="true">
+        <!-- простой SVG-логотип -->
+        <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect x="2" y="2" width="20" height="20" rx="6" fill="#7C3AED"/>
+          <path d="M7 12h10M12 7v10" stroke="#FFF" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
       <div class="title">FUNland</div>
     </div>
+
+    <nav class="top-actions" aria-label="Действия">
+      <button id="btn-admin-toggle" class="icon-btn" title="Тест режима админа (Ctrl+A)">A</button>
+    </nav>
   </header>
 
-  <main id="app">
-    <!-- Главная -->
-    <section id="home" class="page active">
-      <h1>Добро пожаловать в FUNland!</h1>
-      <p>Здесь вы найдёте актуальную информацию, мероприятия и возможности подать заявки или жалобы.</p>
-      <div class="card">
-        <h3>Краткая информация</h3>
-        <p>FUNland — место для увлекательных событий и сообществ. Используйте навигацию внизу, чтобы перейти к нужному разделу.</p>
-      </div>
-    </section>
+  <main id="app" class="container">
+    <!-- Сайдбар с описанием (на больших экранах) -->
+    <aside class="sidebar">
+      <h2>Добро пожаловать</h2>
+      <p class="muted">FUNland — место для событий, заявок и обратной связи. Навигация внизу. Если используете GitHub — загрузите репозиторий и включите Pages.</p>
+      <dl class="info-list">
+        <dt>Подать заявку</dt><dd>Перенаправляет на форму.</dd>
+        <dt>Подать жалобу</dt><dd>Открывает диалог для жалобы с загрузкой доказательств.</dd>
+        <dt>Эвенты</dt><dd>Создавайте эвенты (кнопка только для админа).</dd>
+      </dl>
+    </aside>
 
-    <!-- Информация -->
-    <section id="info" class="page">
-      <h1>Информация</h1>
-      <p>Здесь собрана вся важная информация о проекте, правилах и модах.</p>
-      <ul>
-        <li>Правила сообщества</li>
-        <li>FAQ</li>
-        <li>Ресурсы и модификации</li>
-      </ul>
-      <p>Скачать моды можно по ссылке на файлообменник:</p>
-      <a id="mods-link" href="https://example-filehost.com/mods" target="_blank" rel="noopener">Перейти на файлообменник и скачать моды</a>
-    </section>
+    <section class="content">
+      <section id="home" class="page active">
+        <h1>Главная</h1>
+        <p>Краткая вводная и последние новости проекта.</p>
 
-    <!-- Эвенты -->
-    <section id="events" class="page">
-      <div class="events-header">
-        <h1>Эвенты</h1>
-        <button id="create-event-btn" class="btn primary">Создать эвент</button>
-      </div>
-      <div id="events-list" class="events-list">
-        <!-- Здесь появятся созданные эвенты -->
-        <p class="muted">Эвенты пока не созданы.</p>
-      </div>
+        <div class="cards">
+          <article class="card">
+            <h3>О нас</h3>
+            <p>FUNland — сообщество для совместных игр, эвентов и обмена модами.</p>
+          </article>
+
+          <article class="card">
+            <h3>Быстрые ссылки</h3>
+            <ul class="links">
+              <li><button class="link-like" data-target="info">Информация</button></li>
+              <li><button class="link-like" id="open-apply">Подать заявку</button></li>
+              <li><button class="link-like" id="open-complaint">Подать жалобу</button></li>
+            </ul>
+          </article>
+        </div>
+      </section>
+
+      <section id="info" class="page">
+        <h1>Информация</h1>
+        <p>Здесь размещены правила, ссылки и файлы.</p>
+        <div class="card">
+          <h3>Скачать моды</h3>
+          <p>Перейдите на файлообменник для загрузки сборок и модов.</p>
+          <a id="mods-link" class="btn primary" href="#" target="_blank" rel="noopener">Перейти к модам</a>
+        </div>
+      </section>
+
+      <section id="events" class="page">
+        <div class="events-header">
+          <h1>Эвенты</h1>
+          <div>
+            <button id="create-event-btn" class="btn primary">Создать эвент</button>
+          </div>
+        </div>
+
+        <div id="events-list" class="events-list">
+          <p class="muted">Эвенты ещё не созданы.</p>
+        </div>
+      </section>
     </section>
   </main>
 
-  <!-- Нижняя панель навигации -->
-  <nav class="bottom-nav" aria-label="Главная навигация">
+  <!-- Нижняя навигация -->
+  <nav class="bottom-nav" role="navigation" aria-label="Основная навигация">
     <button class="nav-btn active" data-target="home">Главная</button>
     <button class="nav-btn" data-target="info">Информация</button>
     <button class="nav-btn" id="apply-btn">Подать заявку</button>
@@ -61,63 +92,70 @@
     <button class="nav-btn" data-target="events">Эвенты</button>
   </nav>
 
-  <!-- Модальное окно — Подать жалобу -->
+  <!-- Модаль: Подать жалобу -->
   <div id="complaint-modal" class="modal" aria-hidden="true">
-    <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="complaint-title">
-      <button class="modal-close" data-close>&times;</button>
-      <h2 id="complaint-title">Подать жалобу</h2>
-      <form id="complaint-form">
-        <label>Свое имя
-          <input type="text" name="name" required />
+    <div class="modal-box" role="dialog" aria-modal="true" aria-labelledby="complaint-title">
+      <header class="modal-header">
+        <h2 id="complaint-title">Подать жалобу</h2>
+        <button class="modal-close" data-close aria-label="Закрыть">&times;</button>
+      </header>
+      <form id="complaint-form" class="modal-body">
+        <label>Ваше имя
+          <input name="name" type="text" required placeholder="Иван Иванов" />
         </label>
         <label>Юзернейм в Telegram
-          <input type="text" name="tg" placeholder="@username" required />
+          <input name="tg" type="text" required placeholder="@nickname" />
         </label>
         <label>Юзернейм в Minecraft
-          <input type="text" name="mc" placeholder="nickname" required />
+          <input name="mc" type="text" required placeholder="IGN" />
         </label>
         <label>Причина жалобы
-          <textarea name="reason" rows="4" required></textarea>
-        </label>
-        <label>Доказательства (фото/видео) — можно выбрать несколько
-          <input type="file" name="evidence" id="complaint-files" accept="image/*,video/*" multiple />
+          <textarea name="reason" rows="4" required placeholder="Опишите ситуацию"></textarea>
         </label>
 
-        <div class="file-list" id="complaint-file-list" aria-live="polite"></div>
+        <label>Доказательства (фото/видео)
+          <input id="complaint-files" name="evidence" type="file" accept="image/*,video/*" multiple />
+        </label>
 
-        <div class="modal-actions">
-          <button type="submit" class="btn primary">Отправить жалобу</button>
+        <div id="complaint-previews" class="previews" aria-live="polite"></div>
+
+        <footer class="modal-actions">
+          <button type="submit" class="btn primary">Отправить</button>
           <button type="button" class="btn" data-close>Отмена</button>
-        </div>
+        </footer>
       </form>
     </div>
   </div>
 
-  <!-- Модальное окно — Создать эвент -->
+  <!-- Модаль: Создать эвент -->
   <div id="event-modal" class="modal" aria-hidden="true">
-    <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="event-title">
-      <button class="modal-close" data-close>&times;</button>
-      <h2 id="event-title">Создать эвент</h2>
-      <form id="event-form">
-        <label>Имя эвента
-          <input type="text" name="title" required />
+    <div class="modal-box" role="dialog" aria-modal="true" aria-labelledby="event-title">
+      <header class="modal-header">
+        <h2 id="event-title">Создать эвент</h2>
+        <button class="modal-close" data-close aria-label="Закрыть">&times;</button>
+      </header>
+      <form id="event-form" class="modal-body">
+        <label>Название эвента
+          <input name="title" type="text" required placeholder="Майнкрафт турнир" />
         </label>
         <label>Описание
-          <textarea name="description" rows="4" required></textarea>
+          <textarea name="description" rows="4" required placeholder="Описание эвента"></textarea>
         </label>
-        <label>Фотографии / Видео
-          <input type="file" name="media" id="event-files" accept="image/*,video/*" multiple />
+
+        <label>Фото / Видео
+          <input id="event-files" name="media" type="file" accept="image/*,video/*" multiple />
         </label>
+
         <label>Дополнительные файлы (необязательно)
-          <input type="file" name="extras" id="event-extras" multiple />
+          <input id="event-extras" name="extras" type="file" multiple />
         </label>
 
-        <div class="file-list" id="event-file-list" aria-live="polite"></div>
+        <div id="event-previews" class="previews"></div>
 
-        <div class="modal-actions">
+        <footer class="modal-actions">
           <button type="submit" class="btn primary">Создать</button>
           <button type="button" class="btn" data-close>Отмена</button>
-        </div>
+        </footer>
       </form>
     </div>
   </div>
